# e-commerce_ai_bot

./: .gitignore  PROMPTS.md  pyproject.toml
config/: config.py
few-shot/: bot.py  main.py
few-shot/few-shot-prompts/: examples.yaml
pydantic_script/: script.py
src/: main.py
src/bot/: cli_bot.py  service.py
src/config/: config.py
src/utils/: logger.py
template/: README.md  welcome_email_template.j2
