[project]
name = "e-commerce-ai-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain_community",
    "langchain_openai",
    "langchain-gigachat>=0.3.12",
    "openai",
    "pydantic==2.11.2",
    "pydantic-settings==2.8.1",
    "ruff==0.8.1",
    ]
